Se hicieron cambios para funcionar BibliotecaTest